--- a/TouchUnlock/MainPage.xaml
+++ b/TouchUnlock/MainPage.xaml
@@ -1,12 +1,15 @@
 ﻿<Page
-    x:Class="TouchUnlock.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TouchUnlock"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ColorPicker="using:ColorPicker"
+    x:Class="TouchUnlock.MainPage"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Canvas Name="Container" Background="Black"/>
+    <Canvas x:Name="Container" Background="Black">
+        <ColorPicker:ColorPicker Height="402" Canvas.Left="10" Canvas.Top="180" Width="380"/>
+    </Canvas>
 </Page>
