--- a/TouchUnlock/MainPage.xaml
+++ b/TouchUnlock/MainPage.xaml
@@ -4,12 +4,18 @@
     xmlns:local="using:TouchUnlock"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ColorPicker="using:ColorPicker"
+    xmlns:c4fControls="using:Coding4Fun.Toolkit.Controls"
     x:Class="TouchUnlock.MainPage"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Canvas x:Name="Container" Background="Black">
-        <ColorPicker:ColorPicker x:Name="colorPicker" Height="402" Canvas.Left="10" Canvas.Top="180" Width="380"/>
+        <c4fControls:ColorPicker Height="439" Width="380" Canvas.Left="10" Canvas.Top="10"/>
+        <!--
+        <c4fControls:ColorPicker Height="300" Width="300" />
+        -->
+        <!--
+        <c4fControls:ColorSliderThumb Height="300" Width="100" />
+        -->
     </Canvas>
 </Page>
